--- a/src/assets/styles/components/_table.scss
+++ b/src/assets/styles/components/_table.scss
@@ -127,6 +127,7 @@
           }
           td {
             border-color: var(--grey-30);
+            border-bottom: none;
           }
         }
       }
