--- a/src/assets/styles/helpers/_classname.scss
+++ b/src/assets/styles/helpers/_classname.scss
@@ -384,10 +384,10 @@ $gaps: 4, 8, 12, 16;
 [data-theme="dark"] {
   .color {
     $color-type: (
-      primary: var(--grey-100),
-      secondary: var(--grey-800),
-      tertiary: var(--grey-50),
-      disabled: var(--grey-400),
+      primary: var(--grey-50),
+      secondary: var(--grey-100),
+      tertiary: var(--grey-40),
+      disabled: var(--grey-20),
       selected: var(--brand-500),
       inverse: var(--white),
       brand: var(--brand-700),
